# YV_project

./: .gitignore  TODO  another_test_dashboard.py  app_dashboard.py  app_layout.py  app_parser.py  database.db  patch_win.py  pyproject.toml  requirements.txt  test_app_dashboard.py  test_dashboard.py
assets/: theme.css
table/: rpt_mon_detail_prof-1775652991163 (2).xlsx  rpt_mon_detail_prof-1777544889745.xlsx  rpt_mon_detail_prof-1777545388330.xlsx  rpt_mon_detail_prof-1777545417111.xlsx  rpt_mon_detail_prof-1777545432359.xlsx  rpt_mon_detail_prof-1777545476226.xlsx  rpt_mon_detail_prof-1777545486472.xlsx  rpt_mon_detail_prof-1777545501676.xlsx  rpt_mon_detail_prof-1777545510689.xlsx  rpt_mon_detail_prof-1778138493876.xlsx
